tests/semantic/pass/string_literal_as_array.c
int main(void) {
  int a;
  a = "hallo"[2];
  return a - 'l';
}
