tests/semantic/fail/multiplication_bad_rhs.c
int main(void) {
  int *iptr;
  return 2*iptr;
}
